--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_native_splash: ^2.2.16
   badges: ^2.0.3
+  flutter_bloc: ^8.1.1
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
