--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
+  provide: ^1.0.2
 
 dev_dependencies:
   flutter_test:
