--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: laundary_system
-description: A new Flutter project.
+description: A new Flutter Final Year Project.
 
 
 publish_to: 'none'
@@ -24,6 +24,7 @@ dependencies:
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
   provide: ^1.0.2
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
