--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,16 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   google_fonts: ^3.0.1
   flutter_native_splash: ^2.2.16
-  badges: ^2.0.3
   flutter_bloc: ^8.1.1
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
   provide: ^1.0.2
   shimmer: ^2.0.0
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
+  google_maps_flutter: ^2.2.3
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
