--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,10 +46,11 @@ android {
 
     defaultConfig {
         applicationId "com.laundary.laundary_system"
-        minSdkVersion 21
+        minSdkVersion 20
         targetSdkVersion 33
         versionCode 1
         versionName '1.0'
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -67,4 +68,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-bom:31.2.0'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
