--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shimmer: ^2.0.0
   geocoding: ^2.0.5
   geolocator: ^9.0.2
+  flutter_spinkit: ^5.1.0
   google_maps_flutter: ^2.2.3
   location: ^4.4.0
 
