--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_spinkit: ^5.1.0
   google_maps_flutter: ^2.2.3
-
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
