--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   google_maps_flutter: ^2.2.3
   shared_preferences: ^2.0.17
+  image_picker: ^0.8.6+1
+  firebase_storage: ^11.0.10
 
 dev_dependencies:
   flutter_test:
