--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   shared_preferences: ^2.0.17
   image_picker: ^0.8.6+1
   firebase_storage: ^11.0.10
+  firebase_messaging: ^14.2.2
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
